# cfd

./: .clang-format  .gitignore  README.md  meson.build  visual.py
data/: config.ini  meson.build
data/shaders/: boundary.comp  cfd.comp  cfd_advect.comp  cfd_boundary.comp  cfd_dens_advect.comp  cfd_dens_diffuse.comp  cfd_dens_diffuse_prep.comp  cfd_dens_source.comp  cfd_diffuse.comp  cfd_render.comp  cfd_source.comp  cfd_vel_advect.comp  cfd_vel_diffuse.comp  cfd_vel_divergence.comp  cfd_vel_forces.comp  cfd_vel_project.comp  cfd_vel_update.comp  collision.comp  common.glsl  draw.comp  macro.comp  meson.build  simple.frag  simple.vert  streaming.comp
include/common/: appcontext.h
include/core/: app.h  confighandler.h
include/core/vulkan/: context.h  device.h  vkmemalloc.h  vktypes.h
include/core/window/: windowmanager.h
include/event/: commonevents.h  sub.h
include/logs/: log.h
include/model/: vertex.h
include/rocket/: simu.h
include/utils/: timer.h  vkutils.h
src/: implementations.cpp  main.cpp  meson.build
src/common/: appcontext.cpp  meson.build
src/core/: app.cpp  confighandler.cpp  meson.build
src/core/vulkan/: context.cpp  debugutils.cpp  debugutils.h  descriptorgen.cpp  descriptorgen.h  device.cpp  meson.build  swapchain.cpp  swapchain.h  vktypes.cpp
src/core/window/: meson.build  windowmanager.cpp
src/logs/: log.cpp  meson.build
src/rocket/: meson.build  simu.cpp
src/utils/: meson.build  vkutils.cpp
subprojects/: .gitignore
unittests/: dispatcher.cpp  meson.build
